Rainbow powerup effect

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <body>
         <div class="container-main">
             <div class="container-UI" id="UI-bar">
-                <button id="btn-restart">Restart</button>
-                <button id="btn-change-stats">Change Stats</button>
-                <button id="btn-leaderboard">Leaderboard</button>
+                <div class="container-btns">
+                    <button id="btn-restart">Restart</button>
+                    <button id="btn-change-stats">Change Stats</button>
+                    <button id="btn-leaderboard">Leaderboard</button>
+                </div>
+                <div class="container-power-meter">
+                    <span id="power-meter"></span>
+                </div>
             </div>
             <canvas id="game-canvas" />
         </div>
