update score text

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <button id="btn-change-stats">Change Stats</button>
                     <button id="btn-leaderboard">Leaderboard</button>
                 </div>
+                <p class="score-text">Score: <span id="current-score">0</span></p>
                 <div class="container-power-meter">
                     <span id="power-meter"></span>
                 </div>
