--- a/index.html
+++ b/index.html
@@ -26,24 +26,32 @@
             <canvas id="game-canvas">
         </div>
         <div id="modal-backdrop">
-            <div class="modal" id="modal-edit-stats">
+            <div class="modal" id="modal-change-stats">
                 <h2>Change Stats:</h2>
                 <div class="container-stats">
+                    <div></div>
                     <div>
-                        <div class="container-slider">
-                            <p>Speed:</p>
-                            <input
-                                type="range"
-                                id="slider-speed"
-                                min="1" max="100" value="50"
-                            >
-                        </div>
                         <div class="container-slider">
                             <p>Size:</p>
                             <input
                                 type="range"
                                 id="slider-size"
-                                min="1" max="100" value="50"
+                                min="0" max="1" value="0.5" step="0.01"
+                                onkeydown="return false;"
+                            >
+                        </div>
+                    </div>
+                    <div>
+                        <div class="container-stats-meter">
+                            <span id="stats-meter"></span>
+                        </div>
+                        <div class="container-slider">
+                            <p>Speed:</p>
+                            <input
+                                type="range"
+                                id="slider-speed"
+                                min="0" max="1" value="0.5" step="0.01"
+                                onkeydown="return false;"
                             >
                         </div>
                         <div class="container-slider">
@@ -63,7 +71,7 @@
                             >
                         </div>
                     </div>
-                    <div>
+                    <div id="container-stats-canvas">
                         <canvas id="stats-canvas">
                     </div>
                 </div>
