--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <input
                                 type="range"
                                 id="slider-speed"
-                                min="0" max="1" value="0.5" step="0.01"
+                                min="0" max="1" value="0.4" step="0.2"
                                 onkeydown="return false;"
                             >
                         </div>
@@ -59,15 +59,15 @@
                             <input
                                 type="range"
                                 id="slider-inv-time"
-                                min="1" max="100" value="50"
+                                min="0" max="1" value="0.4" step="0.2"
                             >
                         </div>
                         <div class="container-slider">
                             <p>Charges Needed:</p>
                             <input
                                 type="range"
-                                id="slider-inv-time"
-                                min="1" max="100" value="50"
+                                id="slider-charges-needed"
+                                min="0" max="1" value="0.4" step="0.2"
                             >
                         </div>
                     </div>
