--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@
                     <br>
                     Score: <span id="results-score"></span>
                 </p>
+                <input type="text" placeholder="name" id="input-name">
                 <div>
                     <button class="btn-restart">Restart</button>
-                    <button>Submit Result</button>
+                    <button id="btn-submit">Submit Result</button>
                 </div>
             </div>
         </div>
