--- a/index.html
+++ b/index.html
@@ -104,6 +104,29 @@
                     <button id="btn-submit">Submit Result</button>
                 </div>
             </div>
+            <div class="modal" id="modal-leaderboard">
+                <h2>Leaderboard</h2>
+                <p id="text-leaderboard-load">Fetching leaderboard...</p>
+                <div id="table-leaderboard">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Rank</th>
+                                <th>Name</th>
+                                <th>Score</th>
+                                <th>Time Taken</th>
+                                <th>Time Submitted</th>
+                            </tr>
+                        </thead>
+                        <tbody id="leaderboard-table-body">
+                        </tbody>
+                    </table>
+                    <div class="container-paginator">
+                        <button id="btn-score-back">Back</button>
+                        <button id="btn-score-next">Next</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 
