--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                     Score: <span id="results-score"></span>
                 </p>
                 <input type="text" placeholder="name" id="input-name">
-                <div>
+                <p id="text-score-submit">Submitting score...</p>
+                <div id="container-score-btns">
                     <button class="btn-restart">Restart</button>
                     <button id="btn-submit">Submit Result</button>
                 </div>
