make sure game has ended to restart

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <input type="text" placeholder="name" id="input-name">
                 <p id="text-score-submit">Submitting score...</p>
                 <div id="container-score-btns">
-                    <button class="btn-restart">Restart</button>
+                    <button class="btn-restart">Restart (space)</button>
                     <button id="btn-submit">Submit Result</button>
                 </div>
             </div>
